--- a/style.css
+++ b/style.css
@@ -4,8 +4,14 @@ body{
 h1{
     font-size: 50px;
 }
-.name-highlight{
-    color: orange;
+h2{
+    font-size: 40px;
+}
+p{
+    color: dimgray
+}
+.colour{
+    color:orange;
 }
 .half-width{
     width: 40%;
@@ -15,4 +21,12 @@ h1{
 }
 .half-width img{
     width: 100%;
+}
+.top-bannar{
+    background-image: url("images/top-bannar.png");
+    background-repeat: no-repeat;
+}
+section{
+    height: 500px;
+    padding-bottom: 140px;
 }
